Fix horizontal scrolling in /aboutus and radio button overflow in /

--- a/static/styles.css
+++ b/static/styles.css
@@ -152,8 +152,8 @@ html, body {
   }
 
   .container{
-    padding-left: 2.25rem;
-    padding-right: 2.25rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .project-title {
